--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "davi",
-  "version": "0.1.3",
-  "description": "Data Analytics and Visualization Interface",
+  "name": "dashi",
+  "version": "0.2.0",
+  "description": "User Interface Library for Dashboard Applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch"
   },
   "keywords": [
-    "data analytics",
-    "visualization",
+    "dashboards",
+    "panel management",
     "user interface"
   ],
   "author": "Kelvin Li",
   "license": "BSD-3-Clause",
-  "dependencies": {
-    "semantic-ui": "^2.2.7"
+  "devDependencies": {
+    "semantic-ui": "^2.3.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
