--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "User Interface Library for Dashboard Applications",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config build/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
@@ -16,8 +16,17 @@
   "author": "Kelvin Li",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "base64-inline-loader": "^1.1.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "svg-inline-loader": "^0.8.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.6.0"
+  },
+  "dependencies": {
     "semantic-ui": "^2.3.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "semantic-ui-dropdown": "^2.3.1",
+    "style-loader": "^0.21.0"
   }
 }
