--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashi",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "User Interface Library for Dashboard Applications",
   "main": "index.js",
   "scripts": {
@@ -16,17 +16,14 @@
   "author": "Kelvin Li",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "base64-inline-loader": "^1.1.1",
+    "webpack": "^3.6.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "style-loader": "^0.21.0",
     "file-loader": "^1.1.4",
-    "svg-inline-loader": "^0.8.0",
     "url-loader": "^1.0.1",
-    "webpack": "^3.6.0"
+    "extract-text-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
-    "semantic-ui": "^2.3.1",
-    "semantic-ui-dropdown": "^2.3.1",
-    "style-loader": "^0.21.0"
+    "semantic-ui": "^2.3.1"
   }
 }
