--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dashi",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "User Interface Library for Dashboard Applications",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config build/webpack.dev.js",
+    "build": "webpack --config dist/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
@@ -16,14 +16,31 @@
   "author": "Kelvin Li",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "webpack": "^3.6.0",
     "css-loader": "^0.28.11",
-    "style-loader": "^0.21.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^3.0.0"
+    "webpack": "^3.6.0"
   },
   "dependencies": {
-    "semantic-ui": "^2.3.1"
+    "jquery": "^3.3.1",
+    "semantic-ui-button": "^2.3.1",
+    "semantic-ui-checkbox": "^2.3.1",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-dropdown": "^2.3.1",
+    "semantic-ui-form": "^2.3.1",
+    "semantic-ui-header": "^2.3.1",
+    "semantic-ui-icon": "^2.3.1",
+    "semantic-ui-list": "^2.3.1",
+    "semantic-ui-menu": "^2.3.1",
+    "semantic-ui-modal": "^2.3.1",
+    "semantic-ui-progress": "^2.3.1",
+    "semantic-ui-reset": "^2.3.1",
+    "semantic-ui-segment": "^2.3.1",
+    "semantic-ui-site": "^2.3.1",
+    "semantic-ui-table": "^2.3.1",
+    "semantic-ui-transition": "^2.3.1"
   }
 }
