--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dashi",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "User Interface Library for Dashboard Applications",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config dist/webpack.config.js",
+    "build": "webpack --config build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
   },
@@ -16,6 +16,7 @@
   "author": "Kelvin Li",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.4",
